# 3dbpp-with-rotation--ui-by-qt-opengl-

class_library/: calculatebppmartello.cpp  calculatebppmartello.h  mycolor.cpp  mycolor.h  readwritefile.cpp  readwritefile.h
glut-3.7.6-bin_x64/: readme.txt
qt_bpprotation_v2/: 3dbin.txt  4pc.txt  CMakeLists.txt  CalculateBppErhan.cpp  CalculateBppErhan.h  aaa.txt  ard_box.txt  binpack_erhan_modify.cpp  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multi-layer.txt  qt-3dbpp.pro  qt-3dbpp.pro.user.51b8d35  qt-3dbpp.pro.user.edfb425
